# ritual-scanner

./: .gitignore  README.md  pyproject.toml  scan.py
ritual_scanner/: constants.py
ritual_scanner/scanner/: items.py  scanner.py  utils.py
tests/: test_items.py
